--- a/src/views/index.html
+++ b/src/views/index.html
@@ -34,7 +34,7 @@
         </li>
         <li class="board">
             <h3>Done</h3>
-            <button>
+            <button id="btn-remove-card" onclick="removeCard();">
                 <img src="../../public/images/minus.svg" alt="Remover tarefas">
             </button>
             <div class="dropzone" id="status-done">
